--- a/css/main.css
+++ b/css/main.css
@@ -1,50 +1,50 @@
 html {
-	border: solid 2px green;
-	height: 150%;
+    border : solid 2px green;
+    height : 150%;
 }
 
 .prog-lang-title {
-	
-	/*make it big*/
+
+    /*make it big*/
 }
 
 .side-by-side {
-	border: solid 2px red;
-	display: flex;
-	flex-direction: row; /*default, but just in case*/	
-	justify-content: space-evenly;
+    border          : solid 2px red;
+    display         : flex;
+    flex-direction  : row; /*default, but just in case*/
+    justify-content : space-evenly;
 }
 
 .side-by-side > * {
-	border: solid 2px cyan;
-	margin: 1%;
+    border : solid 2px cyan;
+    margin : 1%;
 }
 
 .img-link:hover {
-	border: solid 1px black;
-	box-shadow: 8px 4px 2px navy;	
+    border     : solid 1px black;
+    box-shadow : 8px 4px 2px navy;
 }
 
 .to-top {
-	background-color: #aaa;
-	border: solid 1px #777;
-	padding: 5px;
+    background-color : #AAAAAA;
+    border           : solid 1px #777777;
+    padding          : 5px;
 }
 
 
 footer {
-    width           : 100%;
-    height          : 8%;
-    background      : #333333;
-    position        : fixed;
-    bottom          : 0;
-    left            : 0;
+    width      : 100%;
+    height     : 8%;
+    background : #333333;
+    position   : fixed;
+    bottom     : 0;
+    left       : 0;
 }
 
-@media screen and (max-width: 768px) {
-	.side-by-side {
-		border: solid 2px red;
-		display: flex;
-		flex-direction: column;
-	}
+@media screen and (max-width : 768px) {
+    .side-by-side {
+        border         : solid 2px red;
+        display        : flex;
+        flex-direction : column;
+    }
 }
