Remove legacy code (<center>)

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 html {
-    border : solid 2px green;
-    height : 150%;
-	background-color : #A3CDDA;
+    border           : solid 2px green;
+    height           : 150%;
+    background-color : #A3CDDA;
 }
 
 .nom-site {
-	font-size : 230%;
-	font-family : Times, Times New Roman, serif;
+    font-size   : 230%;
+    font-family : Times, Times New Roman, serif;
 }
 
 .prog-lang-title {
@@ -38,20 +38,22 @@ html {
 }
 
 #sommaire {
-	font-size : 230%;
-	margin-left: auto;
-	margin-right: auto;
-	width:60%;
-	background-color : #D5E6EA;
+    font-size        : 230%;
+    margin           : auto;
+    text-align       : center;
+    width            : 60%;
+    background-color : #D5E6EA;
+    border           : solid 1px violet;
 }
 
 #list-option {
-	font-size : 200%;
-	margin-left : auto;
-	margin-right : auto;
-	width : 60%;
-	background-color : #5C7B5A;
+    font-size        : 200%;
+    margin-left      : auto;
+    margin-right     : auto;
+    width            : 60%;
+    background-color : #5C7B5A;
 }
+
 footer {
     width      : 100%;
     height     : 8%;
@@ -61,7 +63,7 @@ footer {
     left       : 0;
 }
 
-@media screen and (max-width : 768px) {
+@media screen and (min-width : 1px) and (max-width : 768px) {
     .side-by-side {
         border         : solid 2px red;
         display        : flex;
