--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 html {
     border           : solid 2px green;
     height           : 150%;
-    background-color : #A3CDDA;
+    background-color : #CED5D8;
 }
 
-.nom-site {
-    font-size   : 230%;
-    font-family : Times, Times New Roman, serif;
+.top {
+	border : solid 2px pink;
+	width : 40%;
+	margin : auto;
+	text-align : center;
 }
 
 .prog-lang-title {
@@ -38,26 +40,55 @@ html {
 }
 
 #sommaire {
-    font-size        : 230%;
+    font-size        : 290%;
+	font-family		 : serif;
     margin           : auto;
     text-align       : center;
-    width            : 60%;
-    background-color : #D5E6EA;
-    border           : solid 1px violet;
+    width            : 65%;
+    background-color : #fff;
+    border           : solid 2px violet;
+}
+
+#list {
+	border     : solid 2px yellow;
+	margin     : auto;
 }
 
 #list-option {
-    font-size        : 200%;
-    margin-left      : auto;
-    margin-right     : auto;
-    width            : 60%;
-    background-color : #5C7B5A;
+	border           : solid 2px purple;
+	list-style       : url('../img/puce-liste.svg');
+    font-size        : 230%;
+	font-family      : serif;
+    margin           : auto;
+    width            : 65%;
+	line-height      : 40px;
+    background-color : #fff;
+}
+
+.newsletter {
+	border : solid 2px lime;
+}
+
+.newsletterbox {
+	border : solid 2px red;
+}
+
+.contour {
+	border : solid 2px orange;
+}
+
+.champ-recherche {
+	border : solid 2px cyan;
+}
+
+.bouton-nl {
+	border : solid 2px blue;
 }
 
 footer {
     width      : 100%;
     height     : 8%;
-    background : #333333;
+    background : #B3BAC3;
     position   : fixed;
     bottom     : 0;
     left       : 0;
