--- a/www/css/main.css
+++ b/www/css/main.css
@@ -4,6 +4,10 @@ html {
     background-color : #CED5D8;
 }
 
+main {
+    padding-bottom: 8%;
+}
+
 #top, .top {
     border     : solid 2px pink;
     width      : 40%;
