--- a/www/css/main.css
+++ b/www/css/main.css
@@ -5,7 +5,7 @@ html {
 }
 
 main {
-    padding-bottom: 8%;
+    padding-bottom : 8%;
 }
 
 #top, .top {
@@ -55,6 +55,45 @@ form input {
     display : block;
 }
 
+/*
+thanks to https://stackoverflow.com/users/2217862/jakub-jirutka 's answer
+at https://stackoverflow.com/questions/4098195/can-ordered-list-produce-result-that-looks-like-1-1-1-2-1-3-instead-of-just-1
+~~~~~~ tiered ordered lists ~~~~~~
+ */
+ol {
+    list-style-type : none;
+    counter-reset   : item;
+    margin          : 0;
+    padding         : 0;
+}
+
+ol > li {
+    display           : table;
+    counter-increment : item;
+    margin-bottom     : 0.6em;
+}
+
+ol > li:before {
+    content       : counters(item, ".") ". ";
+    display       : table-cell;
+    padding-right : 0.6em;
+}
+
+li ol > li {
+    margin : 0;
+}
+
+li ol > li:before {
+    content : counters(item, ".") " ";
+}
+
+p + ol {
+    margin-top: 1%;
+}
+
+/*
+^^^^^^ tiered ordered lists ^^^^^^
+ */
 #sommaire {
     font-size        : 290%;
     font-family      : serif;
