--- a/www/css/main.css
+++ b/www/css/main.css
@@ -16,17 +16,19 @@ article {
 }
 
 .top {
-    flex             : 1;
     background-color : white;
     border           : solid 2px pink;
     width            : 40%;
     margin           : auto;
     text-align       : center;
-    transition       : all 0.5s ease-out;
 }
 
-.top:hover {
-    background-color : rgba(224, 224, 224, 0.5);
+.ease-out {
+    transition : all 0.5s ease-out;
+}
+
+.ease-out:hover {
+    background-color : rgba(128, 128, 128, 0.5);
 }
 
 .vertical-space-between {
