--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,9 +1,10 @@
 body {
     min-height : 99vh;
+    padding    : 5%;
 }
 
 html {
-    background-color : #E8EBEC;
+    background-color : lavenderblush;
 }
 
 main {
@@ -14,19 +15,51 @@ article {
     padding : 1.5%;
 }
 
-#ajax-target {
+legend {
     font-weight : bold;
+}
+
+form input {
+    display : block;
+}
+
+h2 {
+    font-weight : bold;
+}
+
+code {
+    background-color : #DDDDDD;
+}
+
+footer {
+    display         : flex;
+    flex-direction  : row;
+    align-items     : center;
+    justify-content : space-around;
+    width           : 100%;
+    height          : 8%;
+    background      : #B3BAC3;
+    position        : fixed;
+    bottom          : 0;
+    left            : 0;
+}
+
+nav {
+    width : 10%;
 }
 
 .top {
     background-color : white;
     width            : 40%;
-    margin           : auto;
     text-align       : center;
+    padding          : 1.5%;
+    margin           : auto;
 }
 
 .ease-out {
-    transition : all 0.5s ease-out;
+    outline        : 5px dotted rgba(116, 119, 164, 0.5);
+    outline-offset : -5px;
+    transition     : all 0.5s ease-out;
 }
 
 .ease-out:hover {
@@ -42,7 +75,7 @@ article {
 .side-by-side {
     display         : flex;
     flex-direction  : row; /*default, but just in case*/
-    justify-content : space-evenly;
+    justify-content : space-around;
     flex            : 1 1 auto;
 }
 
@@ -58,35 +91,8 @@ article {
 }
 
 .to-top {
-    background-color : pink;
+    background-color : lavenderblush;
     padding          : 6px;
-    left             : 85%;
-    top              : 25%;
-}
-
-legend {
-    font-weight : bold;
-}
-
-#signup-form {
-    min-width : 250px;
-}
-
-form input {
-    display : block;
-}
-
-.warning {
-    margin-top : 0;
-    color      : red;
-}
-
-h2 {
-    font-weight : bold;
-}
-
-code {
-    background-color : #DDDDDD;
 }
 
 .code {
@@ -94,11 +100,59 @@ code {
     font-family      : consolas, 'DejaVu Sans Mono', courier, monospace;
 }
 
+.list-option {
+    min-width : 100px;
+    position  : sticky;
+    top       : 20px;
+}
+
+.list-option > li {
+    list-style-type : none;
+    position        : relative;
+}
+
+.list-option > li::before {
+    content     : '</>';
+    font-weight : bold;
+    position    : absolute;
+    left        : -2em;
+    font-size   : 1em;
+}
+
+.space-above {
+    margin-top : 10%;
+}
+
+.page-header {
+    width       : 90%;
+    margin      : auto;
+    background  : #DADEE5;
+    align-items : center;
+}
+
+.js-invalid {
+    border : solid 2px red;
+}
+
+.js-valid {
+    border : solid 2px lime;
+}
+
+.warning {
+    margin-top : 0;
+    color      : red;
+}
+
+#signup-form {
+    min-width : 250px;
+}
+
 /*
 thanks to https://stackoverflow.com/users/2217862/jakub-jirutka 's answer
 at https://stackoverflow.com/questions/4098195/can-ordered-list-produce-result-that-looks-like-1-1-1-2-1-3-instead-of-just-1
 ~~~~~~ tiered ordered lists ~~~~~~
  */
+
 ol {
     list-style-type : none;
     counter-reset   : item;
@@ -133,9 +187,11 @@ p + ol {
 /*
 ^^^^^^ tiered ordered lists ^^^^^^
  */
+
 /*
 ~~~~~~ link styles ~~~~~~
  */
+
 .link {
     box-shadow      : 0 3px 0 #008080;
     position        : relative;
@@ -160,46 +216,6 @@ p + ol {
 /*
 ^^^^^^ link styles ^^^^^^
  */
-
-.list-option {
-    min-width : 100px;
-    position  : sticky;
-    top       : 20px;
-}
-
-.list-option > li {
-    list-style-type : none;
-    position        : relative;
-}
-
-.list-option > li::before {
-    content     : '</>';
-    font-weight : bold;
-    position    : absolute;
-    left        : -2em;
-    font-size   : 1em;
-}
-
-.space-above {
-    margin-top : 10%;
-}
-
-footer {
-    width      : 100%;
-    height     : 8%;
-    background : #B3BAC3;
-    position   : fixed;
-    bottom     : 0;
-    left       : 0;
-}
-
-.js-invalid {
-    border : solid 2px red;
-}
-
-.js-valid {
-    border : solid 2px lime;
-}
 
 @media all and (max-width : 768px) {
     .side-by-side {
